Add fighter systems and command trait support
